fix: add prepare activator modul callback and cleanup for storage chagnes

--- a/packages/base/docs/modules/ROOT/pages/storage.adoc
+++ b/packages/base/docs/modules/ROOT/pages/storage.adoc
@@ -10,6 +10,10 @@
 
 
 
+* Storage Entities
+** dynamic loaded from fs, create, defined
+** static passed by registry
+
 ## Storage types
 
 
@@ -24,3 +28,6 @@ Types:
 * typeorm - sql
 * ldap
 * index
+
+
+
