--- a/docs/modules/ROOT/pages/changelog.adoc
+++ b/docs/modules/ROOT/pages/changelog.adoc
@@ -1,3 +1,10 @@
+=== https://gitlab.com/typexs/typexs/compare/v2.3.3...v2.3.4[2.3.4] (2024-09-05)
+
+==== Bug Fixes
+
+* handle params correctly passed by override
+(https://gitlab.com/typexs/typexs/commit/928c77da216ed263eb60181c1559a91929e0daf4[928c77d])
+
 === https://gitlab.com/typexs/typexs/compare/v2.3.1...v2.3.3[2.3.3] (2024-08-29)
 
 === https://gitlab.com/typexs/typexs/compare/v2.3.0...v2.3.1[2.3.1] (2024-08-26)
