--- a/docs/modules/ROOT/pages/changelog.adoc
+++ b/docs/modules/ROOT/pages/changelog.adoc
@@ -1,3 +1,14 @@
+=== https://gitlab.com/typexs/typexs/compare/v2.3.4...v2.3.5[2.3.5] (2024-09-07)
+
+==== Bug Fixes
+
+* make update nodes in view array public
+(https://gitlab.com/typexs/typexs/commit/eaf69d7659f717d3cdab0230626bb32e8991b154[eaf69d7])
+* problems with passing arguments fro dt to child comp
+(https://gitlab.com/typexs/typexs/commit/96ed826888a0bea1e1e384090cc422f9d96adec1[96ed826])
+* swaping nodes in view array
+(https://gitlab.com/typexs/typexs/commit/9ce8d655c431658bbe73a80c26ee3d7cc9bde3e1[9ce8d65])
+
 === https://gitlab.com/typexs/typexs/compare/v2.3.3...v2.3.4[2.3.4] (2024-09-05)
 
 ==== Bug Fixes
