--- a/docs/modules/ROOT/pages/changelog.adoc
+++ b/docs/modules/ROOT/pages/changelog.adoc
@@ -1,3 +1,16 @@
+=== https://gitlab.com/typexs/typexs/compare/v2.3.9...v2.3.10[2.3.10] (2024-10-01)
+
+==== Bug Fixes
+
+* better check of parameters for queryCallback
+(https://gitlab.com/typexs/typexs/commit/865d3aa9b0c15529391abc407811e36af556daf4[865d3aa])
+* boundries check should detect NaN
+(https://gitlab.com/typexs/typexs/commit/1b48f5869d7a6a26b7706244bae7e31c7729ae20[1b48f58])
+* check frame position update
+(https://gitlab.com/typexs/typexs/commit/3995b3b9a83b76385f05fd97884fd415c5e9e9ca[3995b3b])
+* check if nan is passed to limit or offset
+(https://gitlab.com/typexs/typexs/commit/e3f0569488c7599045a50e54dfad210fad11a62d[e3f0569])
+
 === https://gitlab.com/typexs/typexs/compare/v2.3.8...v2.3.9[2.3.9] (2024-09-24)
 
 ==== Bug Fixes
