--- a/docs/modules/ROOT/pages/changelog.adoc
+++ b/docs/modules/ROOT/pages/changelog.adoc
@@ -1,3 +1,15 @@
+=== https://gitlab.com/typexs/typexs/compare/v2.4.0...v3.0.1[3.0.1] (2025-01-21)
+
+==== Bug Fixes
+
+* wrongly handled cache
+(https://gitlab.com/typexs/typexs/commit/0234b98b14f304c9329f244aa8c3fbdde175402d[0234b98])
+
+==== Features
+
+* spin-off task in @typexs/tasks modul
+(https://gitlab.com/typexs/typexs/commit/a42502064ac6666136645bfc1e48e1e6a90968c1[a425020])
+
 == https://gitlab.com/typexs/typexs/compare/v2.3.13...v2.4.0[2.4.0] (2024-12-09)
 
 === https://gitlab.com/typexs/typexs/compare/v2.3.12...v2.3.13[2.3.13] (2024-11-01)
